[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/level_editor.gd" type="Script" id=1]

[sub_resource type="ButtonGroup" id=1]

[node name="level_editor" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="mouse_stop" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="parts" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="top_bar" type="PanelContainer" parent="parts"]
margin_right = 1920.0
margin_bottom = 38.0

[node name="h_box_container" type="HBoxContainer" parent="parts/top_bar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 31.0

[node name="open" type="Button" parent="parts/top_bar/h_box_container"]
margin_right = 55.0
margin_bottom = 24.0
text = "Open.."

[node name="save" type="Button" parent="parts/top_bar/h_box_container"]
margin_left = 59.0
margin_right = 108.0
margin_bottom = 24.0
text = "Save.."

[node name="v_separator" type="VSeparator" parent="parts/top_bar/h_box_container"]
margin_left = 112.0
margin_right = 116.0
margin_bottom = 24.0

[node name="redo" type="Button" parent="parts/top_bar/h_box_container"]
margin_left = 120.0
margin_right = 164.0
margin_bottom = 24.0
text = "Redo"

[node name="undo" type="Button" parent="parts/top_bar/h_box_container"]
margin_left = 168.0
margin_right = 214.0
margin_bottom = 24.0
text = "Undo"

[node name="spacer" type="Control" parent="parts/top_bar/h_box_container"]
margin_left = 218.0
margin_right = 889.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="parts/top_bar/h_box_container"]
margin_left = 893.0
margin_top = 5.0
margin_right = 978.0
margin_bottom = 19.0
text = "Level editor -"
align = 2

[node name="level_name" type="LineEdit" parent="parts/top_bar/h_box_container"]
margin_left = 982.0
margin_right = 1182.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Name"

[node name="spacer2" type="Control" parent="parts/top_bar/h_box_container"]
margin_left = 1186.0
margin_right = 1857.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="play" type="Button" parent="parts/top_bar/h_box_container"]
margin_left = 1861.0
margin_right = 1881.0
margin_bottom = 24.0
toggle_mode = true
text = ">"

[node name="close" type="Button" parent="parts/top_bar/h_box_container"]
margin_left = 1885.0
margin_right = 1905.0
margin_bottom = 24.0
text = "X"

[node name="middle" type="HSplitContainer" parent="parts"]
margin_top = 42.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_vertical = 3

[node name="left_panel" type="PanelContainer" parent="parts/middle"]
margin_right = 76.0
margin_bottom = 1038.0

[node name="v_box_container" type="VBoxContainer" parent="parts/middle/left_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 69.0
margin_bottom = 1031.0

[node name="label_tiles" type="Label" parent="parts/middle/left_panel/v_box_container"]
margin_right = 62.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Tiles"
align = 1

[node name="tiles" type="VBoxContainer" parent="parts/middle/left_panel/v_box_container"]
margin_top = 18.0
margin_right = 62.0
margin_bottom = 18.0

[node name="h_separator" type="HSeparator" parent="parts/middle/left_panel/v_box_container"]
margin_top = 22.0
margin_right = 62.0
margin_bottom = 26.0

[node name="label_entities" type="Label" parent="parts/middle/left_panel/v_box_container"]
margin_top = 30.0
margin_right = 62.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Entities"
align = 1

[node name="entities" type="VBoxContainer" parent="parts/middle/left_panel/v_box_container"]
margin_top = 48.0
margin_right = 62.0
margin_bottom = 48.0

[node name="h_separator2" type="HSeparator" parent="parts/middle/left_panel/v_box_container"]
margin_top = 52.0
margin_right = 62.0
margin_bottom = 56.0

[node name="label2" type="Label" parent="parts/middle/left_panel/v_box_container"]
margin_top = 60.0
margin_right = 62.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = "Modes"
align = 1

[node name="modes" type="VBoxContainer" parent="parts/middle/left_panel/v_box_container"]
margin_top = 78.0
margin_right = 62.0
margin_bottom = 146.0

[node name="erase" type="Button" parent="parts/middle/left_panel/v_box_container/modes"]
margin_right = 62.0
margin_bottom = 20.0
toggle_mode = true
group = SubResource( 1 )
text = "Erase"

[node name="add" type="Button" parent="parts/middle/left_panel/v_box_container/modes"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 44.0
toggle_mode = true
group = SubResource( 1 )
text = "Add"

[node name="replace" type="Button" parent="parts/middle/left_panel/v_box_container/modes"]
margin_top = 48.0
margin_right = 62.0
margin_bottom = 68.0
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Replace"

[node name="entity_editor" type="VBoxContainer" parent="parts/middle/left_panel/v_box_container"]
visible = false
margin_top = 120.0
margin_right = 66.0
margin_bottom = 142.0

[node name="h_separator2" type="HSeparator" parent="parts/middle/left_panel/v_box_container/entity_editor"]
margin_right = 66.0
margin_bottom = 4.0

[node name="label3" type="Label" parent="parts/middle/left_panel/v_box_container/entity_editor"]
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Properties"
align = 1

[node name="placeholder" type="Control" parent="parts/middle"]
margin_left = 88.0
margin_right = 1920.0
margin_bottom = 1038.0
mouse_filter = 2
[connection signal="gui_input" from="mouse_stop" to="." method="process_input"]
[connection signal="pressed" from="parts/top_bar/h_box_container/open" to="." method="open_level_dialog"]
[connection signal="pressed" from="parts/top_bar/h_box_container/save" to="." method="save_level_dialog"]
[connection signal="pressed" from="parts/top_bar/h_box_container/redo" to="." method="redo"]
[connection signal="pressed" from="parts/top_bar/h_box_container/undo" to="." method="undo"]
[connection signal="toggled" from="parts/top_bar/h_box_container/play" to="." method="play_toggled"]
[connection signal="pressed" from="parts/middle/left_panel/v_box_container/modes/erase" to="." method="select_erase"]
[connection signal="pressed" from="parts/middle/left_panel/v_box_container/modes/add" to="." method="select_add"]
[connection signal="pressed" from="parts/middle/left_panel/v_box_container/modes/replace" to="." method="select_nonerase"]
